src/objects/GoogleStorage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AccessToken__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccessToken</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BucketName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BucketName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAccountEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ServiceAccountEmail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>GoogleStorage</label>
</CustomObject>